<resources>
    <string name="app_name">My Users</string>

    <string name="txtTitle">My Users</string>
    <string name="txtAuthor">Ashton Uttayaya</string>
    <string name="txtCompany">auttayaya@gmail.com</string>
    <string name="txtLinkedIn"><a href="https://www.linkedin.com/in/ashton-uttayaya/">LinkedIn</a></string>

    <string name="txtAdmin">Admin Users</string>
    <string name="txtAdd">Add:</string>
    <string name="txtUpdate">Update:</string>
    <string name="txtDelete">Delete:</string>
    <string name="txtUserName">Username:</string>
    <string name="txtPassword">Password:</string>
    <string name="txtUpdateUserName">Current:</string>
    <string name="txtNewUserName">New:</string>
    <string name="btnAddUser">Add</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="btnViewData">View</string>

    <string name="hntEditName">Enter Username</string>
    <string name="hntEditPassword">Enter Password</string>
    <string name="hntUpdateUserName">Current Username</string>
    <string name="hntNewUserName">New Username</string>
    <string name="hntDelete">User to delete</string>
</resources>