<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="10dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@color/dark_gray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAdmin"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/aqua"/>

    <TextView
        android:id="@+id/txtAdd"
        android:text="@string/txtAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAdmin"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:layout_marginStart="40dp"
        android:textSize="20sp"
        android:textColor="@color/egg_shell"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/txtUserName"
        android:text="@string/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAdd"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="14sp"
        android:textStyle="normal"
        android:textColor="@color/aqua"
        />

    <EditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtUserName"
        app:layout_constraintStart_toEndOf="@+id/txtUserName"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:hint="@string/hntEditName"
        android:backgroundTint="@color/black"
        android:textColor="@color/egg_shell"
        />

    <TextView
        android:id="@+id/txtPassword"
        android:text="@string/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textSize="14sp"
        android:textColor="@color/aqua"
        android:textStyle="normal"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPassword"
        app:layout_constraintStart_toEndOf="@+id/txtPassword"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/hntEditPassword"
        android:backgroundTint="@color/black"
        android:textColor="@color/egg_shell"
        />

    <TextView
        android:id="@+id/txtUpdate"
        android:text="@string/txtUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textSize="20sp"
        android:textColor="@color/egg_shell"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/txtUpdateUserName"
        android:text="@string/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdate"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/aqua"
        />

    <EditText
        android:id="@+id/UpdateUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtUpdateUserName"
        app:layout_constraintStart_toEndOf="@+id/txtUpdateUserName"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/hntUpdateUserName"
        android:backgroundTint="@color/black"
        android:textColor="@color/egg_shell"
        />

    <TextView
        android:id="@+id/txtNewUserName"
        android:text="@string/txtNewUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtUpdateUserName"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/aqua"
        />

    <EditText
        android:id="@+id/newUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtNewUserName"
        app:layout_constraintStart_toEndOf="@+id/txtNewUserName"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="14sp"
        android:hint="@string/hntNewUserName"
        android:backgroundTint="@color/black"
        android:textColor="@color/egg_shell"
        />

    <TextView
        android:id="@+id/txtDelete"
        android:text="@string/txtDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNewUserName"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textSize="20sp"
        android:textColor="@color/egg_shell"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/txtDeleteUserName"
        android:text="@string/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@+id/txtDelete"
        app:layout_constraintEnd_toEndOf="@+id/txtUserName"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/aqua"
        />

    <EditText
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDeleteUserName"
        app:layout_constraintStart_toEndOf="@+id/txtDeleteUserName"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:textSize="14sp"
        android:textStyle="normal"
        android:freezesText="false"
        android:hint="@string/hntDelete"
        android:backgroundTint="@color/black"
        android:textColor="@color/egg_shell"
        />

    <Button
        android:id="@+id/btnViewData"
        android:text="@string/btnViewData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:onClick="view"
        android:textColor="@color/egg_shell"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnAddUser"
        android:text="@string/btnAddUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_constraintStart_toEndOf="@+id/btnViewData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:onClick="add"
        android:textColor="@color/egg_shell"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnUpdate"
        android:text="@string/btnUpdate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_constraintStart_toEndOf="@+id/btnAddUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:onClick="update"
        android:textColor="@color/egg_shell"
        android:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btnDelete"
        android:text="@string/btnDelete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:layout_constraintStart_toEndOf="@+id/btnUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:textSize="10sp"
        android:textStyle="bold|italic"
        android:onClick="delete"
        android:textColor="@color/egg_shell"
        android:backgroundTint="@color/black" />






</androidx.constraintlayout.widget.ConstraintLayout>