<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".SplashActivity"
    android:background="@color/dark_gray">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/aqua" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAuthor"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/aqua" />

    <TextView
        android:id="@+id/txtCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCompany"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/aqua"
        />

    <TextView
        android:id="@+id/txtLinkedIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLinkedIn"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCompany"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/aqua"
        />



</androidx.constraintlayout.widget.ConstraintLayout>